adding weed works and displays

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,12 +18,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Current Rappers</h1>
-    <ul class="rappers">
+    <h1>Current Weed that has been tested and smoked</h1>
+    <ul class="weed">
     <% for(let i=0; i < info.length; i++) {%>
-        <li class="rapper">
-            <span><%= info[i].stageName %></span>
-            <span><%= info[i].birthName %></span>
+        <li class="weed">
+            <span><%= info[i].budName %></span>
+            <span><%= info[i].typeOf %></span>
             <span><%= info[i].likes %></span>
             <span class='fa fa-thumbs-up'></span>
             <span class='fa fa-trash'></span>
@@ -31,11 +31,11 @@
     <% } %>
     </ul>
 
-    <h2>Add A Rapper:</h2>
+    <h2>Add Weed:</h2>
 
-    <form action="/addRapper" method="POST">
-        <input type="text" placeholder="Stage Name" name="stageName">
-        <input type="text" placeholder="Birth Name" name="birthName">
+    <form action="/addBud" method="POST">
+        <input type="text" placeholder="Bud Name" name="budName">
+        <input type="text" placeholder="Type of Bud" name="typeOf">
         <input type="submit">
     </form>
     
